--- a/index.html
+++ b/index.html
@@ -1,1 +1,125 @@
-poop
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Bhargava B Hegde</title>
+  <meta name="description" content="An explaination for the projects">
+  <meta name="author" content="bhargav">
+
+  <!-- <script type="text/javascript" src="js/jquery-3.1.0.js"></script> -->
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <!-- <script type="text/javascript">
+    $(document).ready(function(){
+
+    });
+  </script> -->
+</head>
+
+<body>
+  <h1>Projects</h1>
+  <div class="container">
+    <div class="project">
+      <h2>London</h2>
+      <p>London is the capital city of England.</p>
+      <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    </div>
+
+    <div class="project">
+      <h2>Paris</h2>
+      <p>Paris is the capital of France.</p>
+      <p>The Paris area is one of the largest population centers in Europe, with more than 12 million inhabitants.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>London</h2>
+      <p>London is the capital city of England.</p>
+      <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+    </div>
+
+    <div class="project">
+      <h2>Paris</h2>
+      <p>Paris is the capital of France.</p>
+      <p>The Paris area is one of the largest population centers in Europe, with more than 12 million inhabitants.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>Tokyo</h2>
+      <p>Tokyo is the capital of Japan.</p>
+      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
+    </div>
+
+    <div class="project">
+      <h2>New York</h2>
+      <p>The City of New York is the most populous city in the United States.</p>
+      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+    </div>
+  </div>
+
+</body>
+</html>
