--- a/index.html
+++ b/index.html
@@ -1,125 +1,44 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
 
-<html lang="en">
-<head>
-  <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+<link rel="stylesheet" href="css/styles.css">
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 
-  <title>Bhargava B Hegde</title>
-  <meta name="description" content="An explaination for the projects">
-  <meta name="author" content="bhargav">
+<!-- <script src="js/libs/angular.min.js"></script>
+<script src="js/libs/angular-route.js"></script> -->
 
-  <!-- <script type="text/javascript" src="js/jquery-3.1.0.js"></script> -->
-  <link rel="stylesheet" href="css/styles.css">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
 
-  <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-  <!-- <script type="text/javascript">
-    $(document).ready(function(){
+<script src="js/src/app.js"></script>
 
-    });
-  </script> -->
-</head>
+<body ng-app="myApp">
 
-<body>
-  <h1>Projects</h1>
-  <div class="container">
-    <div class="project">
-      <h2>London</h2>
-      <p>London is the capital city of England.</p>
-      <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    </div>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#/" class="brand-logo right  hide-on-med-and-down">Bhargav Hegde</a>
+    <ul id="nav-mobile" class="left">
+      <li><a href="#/">Home</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#projects">Projects</a></li>
+    </ul>
+  </div>
+</nav>
 
-    <div class="project">
-      <h2>Paris</h2>
-      <p>Paris is the capital of France.</p>
-      <p>The Paris area is one of the largest population centers in Europe, with more than 12 million inhabitants.</p>
-    </div>
+<div ng-view></div>
 
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
 
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>London</h2>
-      <p>London is the capital city of England.</p>
-      <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-    </div>
-
-    <div class="project">
-      <h2>Paris</h2>
-      <p>Paris is the capital of France.</p>
-      <p>The Paris area is one of the largest population centers in Europe, with more than 12 million inhabitants.</p>
-    </div>
-
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>Tokyo</h2>
-      <p>Tokyo is the capital of Japan.</p>
-      <p>It is the center of the Greater Tokyo Area,  and the most populous metropolitan area in the world.</p>
-    </div>
-
-    <div class="project">
-      <h2>New York</h2>
-      <p>The City of New York is the most populous city in the United States.</p>
-      <p>New York is an important center for international diplomacy and has been described as the cultural and financial capital of the world.</p>
+<footer class="page-footer">
+  <div class="footer-copyright">
+    <div class="container">
+    © 2014 Copyright Text
     </div>
   </div>
+</footer>
 
 </body>
 </html>
