--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <li><a href="#/">Home</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#cv">CV</a></li>
     </ul>
   </div>
 </nav>
 
 <div ng-view></div>
-
 
 <footer class="page-footer">
   <div class="footer-copyright">
