--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="#/">Home</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="#cv">CV</a></li>
+      <li><a href="https://bhargavbhegde7.github.io/views/resume_bhargava_b_hegde.pdf">CV</a></li>
     </ul>
   </div>
 </nav>
