adding game link to the home page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
               <li><a href="#github">Github</a></li>
               <li><a href="#facebook">Facebook</a></li>
               <li><a href="https://bhargavbhegde7.github.io/views/resume_bhargava_b_hegde.pdf">CV</a></li>
+              <li><a href="game.html">Tetris</a></li>
             </ul>
           </div>
         </nav>
