strip away the cluttering css frameworks

--- a/index.html
+++ b/index.html
@@ -3,63 +3,60 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
       <link rel="stylesheet" href="css/styles.css">
-      <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
       <script type="text/javascript" src="js/projects.js"></script>
     </head>
 
     <body>
-
-      <div class="navbar-fixed">
-        <nav class="navbar-fixed #37474f blue-grey darken-3">
-          <div class="nav-wrapper">
-            <ul id="nav-mobile" class="left">
-              <li><a href="#linkedin">LinkedIn</a></li>
-              <li><a href="#github">Github</a></li>
-              <li><a href="#facebook">Facebook</a></li>
-              <li><a href="https://bhargavbhegde7.github.io/views/resume_bhargava_b_hegde.pdf">CV</a></li>
-              <li><a href="game.html">Tetris</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-
-      <div class="contact_info">
-        <img class="profile_pic" src="images/profile_pic.jpeg" width="25%">
-        <center><p style="font-size: 140%;">  Bhargava B Hegde</p></center>
-        <center><p> <strong>Ph - </strong> (+91) 7829876713</p></center>
-        <center><p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p></center>
-      </div>
-
-      <div class="projects">
-        <div class="row">
-          <div class="col s12 m6">
-            <div class="card-panel teal">
-              <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-              </span>
+      <div id="allfather" class="center">
+        <div class="navbar-fixed">
+          <nav class="navbar-fixed #37474f blue-grey darken-3">
+            <div class="nav-wrapper">
+              <ul id="nav-mobile" class="left">
+                <li><a href="#linkedin">LinkedIn</a></li>
+                <li><a href="#github">Github</a></li>
+                <li><a href="files/resume_bhargava_b_hegde.pdf">CV</a></li>
+                <li><a href="game.html">Tetris</a></li>
+              </ul>
             </div>
-          </div> <!-- col 1 -->
-
-          <div class="col s12 m6">
-            <div class="card-panel teal">
-              <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-              </span>
-            </div>
-          </div> <!-- col 2 -->
-        </div> <!-- row 1 -->
-      </div> <!-- projects div -->
-
-      <footer class="page-footer #37474f blue-grey darken-3">
-        <div class="footer-copyright">
-          <div class="container">
-          © Copyright Text
-          </div>
+          </nav>
         </div>
-      </footer>
+
+        <div class="contact_info">
+          <img id="profile_pic" src="images/profile_pic.jpeg">
+          <center><p style="font-size: 140%;">  Bhargava B Hegde</p></center>
+          <center><p> <strong>Ph - </strong> (+91) 7829876713</p></center>
+          <center><p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p></center>
+        </div>
+
+        <div class="projects">
+          <div class="row">
+            <div class="col s12 m6">
+              <div class="card-panel teal">
+                <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                </span>
+              </div>
+            </div> <!-- col 1 -->
+
+            <div class="col s12 m6">
+              <div class="card-panel teal">
+                <span class="white-text">I am a very simple card. I am good at containing small bits of information.
+                I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
+                </span>
+              </div>
+            </div> <!-- col 2 -->
+          </div> <!-- row 1 -->
+        </div> <!-- projects div -->
+
+        <footer class="page-footer #37474f blue-grey darken-3">
+          <div class="footer-copyright">
+            <div class="container">
+            © Copyright Text
+            </div>
+          </div>
+        </footer>
+    </div>
     </body>
   </html>
