more clutter removal

--- a/index.html
+++ b/index.html
@@ -10,24 +10,17 @@
 
     <body>
       <div id="allfather" class="center">
-        <div class="navbar-fixed">
-          <nav class="navbar-fixed #37474f blue-grey darken-3">
-            <div class="nav-wrapper">
-              <ul id="nav-mobile" class="left">
-                <li><a href="#linkedin">LinkedIn</a></li>
-                <li><a href="#github">Github</a></li>
-                <li><a href="files/resume_bhargava_b_hegde.pdf">CV</a></li>
-                <li><a href="game.html">Tetris</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
 
         <div class="contact_info">
-          <img id="profile_pic" src="images/profile_pic.jpeg">
-          <center><p style="font-size: 140%;">  Bhargava B Hegde</p></center>
-          <center><p> <strong>Ph - </strong> (+91) 7829876713</p></center>
-          <center><p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p></center>
+          <img id="profile_pic" src="images/profile_pic.jpeg">          
+            <p style="font-size: 140%;">  BHARGAVA B HEGDE</p>
+            <p> <strong>Ph - </strong> (+91) 7829876713</p>
+            <p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p>
+            <div>              
+              <a class="contact-link" href="#linkedin"><img class="icon" src="images/linkedin.png"></a>
+              <a class="contact-link" href="#github"><img class="icon" src="images/github.png"></a>
+              <a class="contact-link" href="files/resume_bhargava_b_hegde.pdf"><img class="icon" src="images/pdf.png"></a>              
+            </div>
         </div>
 
         <div class="projects">
