strip away the cluttering css frameworks

--- a/index.html
+++ b/index.html
@@ -11,16 +11,33 @@
     <body>
       <div id="allfather" class="center">
 
-        <div class="contact_info">
+        <div>
           <img id="profile_pic" src="images/profile_pic.jpeg">          
-            <p style="font-size: 140%;">  BHARGAVA B HEGDE</p>
-            <p> <strong>Ph - </strong> (+91) 7829876713</p>
-            <p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p>
-            <div>              
-              <a class="contact-link" href="#linkedin"><img class="icon" src="images/linkedin.png"></a>
-              <a class="contact-link" href="#github"><img class="icon" src="images/github.png"></a>
-              <a class="contact-link" href="files/resume_bhargava_b_hegde.pdf"><img class="icon" src="images/pdf.png"></a>              
-            </div>
+          <p id="name">  BHARGAVA B HEGDE</p>            
+          <p> <strong>Ph - </strong> (+91) 7829876713</p>
+          <p> <strong>Email - </strong> bhargavbhegde7@gmail.com</p>
+
+          <br>
+          <div>              
+            <a class="contact-link" href="#linkedin"><img class="icon" src="images/linkedin.png"></a>
+            <a class="contact-link" href="#github"><img class="icon" src="images/github.png"></a>
+            <a class="contact-link" href="files/resume_bhargava_b_hegde.pdf"><img class="icon" src="images/pdf.png"></a>              
+          </div>
+
+        </div>
+
+        <div>
+          <br>
+          <h3>Work Experience</h3>
+          <ul>
+            <li>
+              <p>Software Developer Engineer at <a href="https://www.infinera.com/">Infinera India pvt ltd</a> - from 2016 to present </p>
+            </li>
+            <li>
+              <p>Java Web Developer at <a href="https://www.indegene.com/">Indegene Lifesystems</a> - from 2014 to 2016 </p>
+            </li>
+          </ul>
+          <br>
         </div>
 
         <div class="projects">
