full style change

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
         <div class="two-cell-row">
           <div class="cell">
-            <p class="hover-bright" id="name"><strong>Hi, I am Bhargav!</strong></p>
-            <p class="hover-bright contact-info"><strong>Email:</strong> bhargavbhegde7@gmail.com</p>
-            <p class="hover-bright contact-info"><strong>Phone:</strong> (+91) 7829876713</p>
+            <p class="hover-bright contact-info" id="name"><strong>Hi, I am Bhargav!</strong></p>
+            <p class="hover-bright contact-info sub-name-detail"><strong>Email:</strong> bhargavbhegde7@gmail.com</p>
+            <p class="hover-bright contact-info sub-name-detail"><strong>Phone:</strong> (+91) 7829876713</p>
           </div>
           <div class="cell">
 
