make div contain skills spread randomly

--- a/index.html
+++ b/index.html
@@ -10,11 +10,54 @@
 
         <div class="two-cell-row">
           <div class="cell">
-            <p class="hover-bright contact-info" id="name"><strong>Hi, I am Bhargav!</strong></p>
-            <p class="hover-bright contact-info sub-name-detail"><strong>Email:</strong> bhargavbhegde7@gmail.com</p>
-            <p class="hover-bright contact-info sub-name-detail"><strong>Phone:</strong> (+91) 7829876713</p>
+            <p class="hover-bright white-text contact-info" id="name"><strong>Hi, I am Bhargav!</strong></p>
+            <p class="hover-bright white-text contact-info sub-name-detail"><strong>Email:</strong> bhargavbhegde7@gmail.com</p>
+            <p class="hover-bright white-text contact-info sub-name-detail"><strong>Phone:</strong> (+91) 7829876713</p>
           </div>
           <div class="cell">
+            <p class="white-text" id="projects-banner"><strong>PROJECTS</strong></p>
+
+            <div class="" id="skills">
+              <a href="#">
+                <p class="white-text hover-bright tech" id="concurrency">Concurrency</p>
+              </a>
+              <a href="#">
+                <p class="white-text hover-bright tech" id="image-processing">Image processing</p>
+              </a>
+              <a href="#">
+                <p class="white-text hover-bright tech" id="robotics">Robotics</p>
+              </a>
+              <a href="#">
+                <p class="white-text hover-bright tech" id="network">Network programming</p>
+              </a>
+              <a href="#">
+                <p class="white-text hover-bright tech" id="android">Android</p>
+              </a>
+              <a href="#">
+                <p class="white-text hover-bright tech" id="python">Python</p>
+              </a>
+              <a href="https://github.com/bhargavbhegde7?utf8=%E2%9C%93&tab=repositories&q=&type=&language=java">
+                <p class="white-text hover-bright tech" id="java">Java</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="cpp">C++</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="golang">Golang</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="iot">Internet Of Things</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="nodejs">Node js</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="web">Web</p>
+              </a>
+              <a href="#" target="_blank">                
+                <p class="white-text hover-bright tech" id="ml">Deep Learning</p>
+              </a>
+            </div>
 
           </div>
         </div>
