--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="css/styles.css">
+      <script type="text/javascript" src="js/projects.js"></script>
     </head>
 
-    <body>
+    <body onload="loadProjects()">
       <div id="parent-of-all">
 
         <div class="two-cell-row">
@@ -17,23 +18,23 @@
           <div class="cell">
             <p class="white-text" id="projects-banner"><strong>PROJECTS</strong></p>
 
-            <div class="" id="skills">
-              <a href="#">
+            <div id="skills">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="concurrency">Concurrency</p>
               </a>
-              <a href="#">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="image-processing">Image processing</p>
               </a>
-              <a href="#">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="robotics">Robotics</p>
               </a>
-              <a href="#">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="network">Network programming</p>
               </a>
-              <a href="#">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="android">Android</p>
               </a>
-              <a href="#">
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="python">Python</p>
               </a>
               <a href="https://github.com/bhargavbhegde7?utf8=%E2%9C%93&tab=repositories&q=&type=&language=java">
@@ -54,8 +55,38 @@
               <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="web">Web</p>
               </a>
-              <a href="#" target="_blank">                
+              <a href="#" target="_blank">
                 <p class="white-text hover-bright tech" id="ml">Deep Learning</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="tensorflow">Tensorflow</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="keras">Keras</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="raspberrypi">Raspberry Pi</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="websockets">websockets</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="c">C</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="opencv">OpenCV</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="nodemcu">nodemcu</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="chatbot">Chat Bot</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="microservices">Micro Services</p>
+              </a>
+              <a href="#" target="_blank">
+                <p class="white-text hover-bright tech" id="docker">Docker</p>
               </a>
             </div>
 
