--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <!-- <a href="#!" class="brand-logo">Bhargav</a> -->
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="left hide-on-med-and-down">
-              <li class="active"><a href="sass.html">Home</a></li>
+              <li ><a href="sass.html">Home</a></li>
               <li><a href="badges.html">Projects</a></li>
               <li class="active"><a href="collapsible.html">Blog</a></li>
               <li><a href="mobile.html">Tetris</a></li>
@@ -56,9 +56,12 @@
 
         <h3>How to train your Dinosaur</h3>
         <h4>Part 1 - Inception: </h4>
-        <img class="responsive-img" src="images/dinosaur.jpg">
+        <div class="row">
+          <img class="col s6 responsive-img" src="images/dinosaur.gif">
+          <img class="col s6 responsive-img" src="images/ann.gif">
+        </div>        
         <p class="flow-text">
-          We have all seen the t-rex dinosaur game on the chrome offline page above. Agreeably it is a pretty fun game. But the problem was I couldn’t get past an average score. Being an engineer, I wanted to do something about it. I am not mathematician, I am not PhD, and neither do I hold multiple degrees. So I set out to find something with which I can hack my way in and use it for my own purposes.
+          We have all seen the t-rex dinosaur game on the chrome offline page above. Agreeably it is a pretty fun game. But the problem was I couldn’t get past an average score. Being an engineer, I wanted to do something about it. I am no mathematician, I am not PhD, and neither do I hold multiple degrees. So I set out to find something with which I can hack my way in and use it for my own purposes.
         </p>
         <p class="flow-text">
           The full code for the project can be found <a href="https://github.com/bhargavbhegde7/LearnANN" target="_blank">here</a>.
@@ -197,5 +200,15 @@
         <!-- -------------------------------------------------------------------------------- -->
         <!-- -------------------------------------------------------------------------------- -->
       </div>
+
+      <footer class="page-footer blue-grey darken-3">        
+        <div class="footer-copyright">
+          <div class="container">
+          © All rights reserved
+          <a class="grey-text text-lighten-4 right" href="#!">Contact information</a>
+          </div>
+        </div>
+      </footer>
+            
     </body>
   </html>
