--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         <!-- -------------------------------------------------------------------------------- -->
         <!-- -------------------------------------------------------------------------------- -->
 
-        <h3>How to train your Dinosaur</h3>
-        <h4>Part 1 - Inception: </h4>
+        <h3>How to train your Dinosaur</h3>        
         <div class="row">
-          <img class="col s6 responsive-img" src="images/dinosaur.gif">
-          <img class="col s6 responsive-img" src="images/ann.gif">
-        </div>        
+          <img class="col s6 responsive-img" src="images/dinosaur.jpg">
+          <img class="col s6 responsive-img" src="images/game_screenshot.png">
+        </div>
+        <h4>Part 1 - Inception: </h4>
         <p class="flow-text">
           We have all seen the t-rex dinosaur game on the chrome offline page above. Agreeably it is a pretty fun game. But the problem was I couldn’t get past an average score. Being an engineer, I wanted to do something about it. I am no mathematician, I am not PhD, and neither do I hold multiple degrees. So I set out to find something with which I can hack my way in and use it for my own purposes.
         </p>
