--- a/index.html
+++ b/index.html
@@ -36,18 +36,14 @@
             <!-- <a href="#!" class="brand-logo">Bhargav</a> -->
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="left hide-on-med-and-down">
-              <li ><a href="sass.html">Home</a></li>
-              <li><a href="badges.html">Projects</a></li>
-              <li class="active"><a href="collapsible.html">Blog</a></li>
-              <li><a href="mobile.html">Tetris</a></li>
+              <li ><a href="contact.html">About me</a></li>
+              <li class="active"><a href="index.html">Blog</a></li>
             </ul>
           </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="sass.html">Home</a></li>
-          <li><a href="badges.html">Projects</a></li>
-          <li class="active"><a href="collapsible.html">Blog</a></li>
-          <li><a href="mobile.html">Tetris</a></li>
+          <li><a href="contact.html">About me</a></li>
+          <li class="active"><a href="index.html">Blog</a></li>
         </ul>
 
         <!-- -------------------------------------------------------------------------------- -->
@@ -199,16 +195,14 @@
         <!-- -------------------------------------------------------------------------------- -->
         <!-- -------------------------------------------------------------------------------- -->
         <!-- -------------------------------------------------------------------------------- -->
-      </div>
-
-      <footer class="page-footer blue-grey darken-3">        
-        <div class="footer-copyright">
-          <div class="container">
-          © All rights reserved
-          <a class="grey-text text-lighten-4 right" href="#!">Contact information</a>
+        <footer class="page-footer blue-grey darken-3">        
+          <div class="footer-copyright">
+            <div class="container">
+            © All rights reserved
+            <a class="grey-text text-lighten-4 right" href="contact.html" target="_blank">Contact information</a>
+            </div>
           </div>
-        </div>
-      </footer>
-            
+        </footer>
+      </div>            
     </body>
   </html>
