--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Portfolio</title>
+      <title>How to train your Dinosaur</title>
       <link rel="stylesheet" href="css/styles.css">
 
       <!-- Compiled and minified CSS -->
