contact info changed

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <!-- <a href="#!" class="brand-logo">Bhargav</a> -->
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="left hide-on-med-and-down">
-              <li ><a href="contact.html">About me</a></li>
+              <li ><a href="files/resume_bhargava_b_hegde.pdf">About me</a></li>
               <li class="active"><a href="index.html">Blog</a></li>
             </ul>
           </div>
         </nav>
         <ul class="sidenav" id="mobile-demo">
-          <li><a href="contact.html">About me</a></li>
+          <li><a href="files/resume_bhargava_b_hegde.pdf">About me</a></li>
           <li class="active"><a href="index.html">Blog</a></li>
         </ul>
 
@@ -199,7 +199,7 @@
           <div class="footer-copyright">
             <div class="container">
             © All rights reserved
-            <a class="grey-text text-lighten-4 right" href="contact.html" target="_blank">Contact information</a>
+            <a class="grey-text text-lighten-4 right" href="files/resume_bhargava_b_hegde.pdf" target="_blank">Contact information</a>
             </div>
           </div>
         </footer>
