name change test

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <body>
       <header class="page-header">
           <div class="black-text center">
-            <h4>Bhargava Hegde</h4>
+            <h4>Bhargav Hegde</h4>
             <a href="https://www.linkedin.com/in/bhargav-hegde-5b280469/">LinkedIn</a>&nbsp;&nbsp;&nbsp;            
             <a href="https://github.com/bhargavbhegde7">GitHub</a>
           </div>
