--- a/utils.html
+++ b/utils.html
@@ -34,7 +34,7 @@
  </head>
  <body>
   <p id="tunnel_url" style="display:none">
-   https://1ba5d1f3.ngrok.io
+   xyz.com
   </p>
   <button onclick="getTunnelTry()">
    click here
