--- a/utils.html
+++ b/utils.html
@@ -34,7 +34,7 @@
  </head>
  <body>
   <p id="tunnel_url" style="display:none">
-   https://9ab8fe6f.ngrok.io
+   hello darkness my old friend
   </p>
   <button onclick="getTunnelTry()">
    click here
