--- a/utils.html
+++ b/utils.html
@@ -34,7 +34,7 @@
  </head>
  <body>
   <p id="tunnel_url" style="display:none">
-   https://53c0ca87.ngrok.io
+   Hello world
   </p>
   <button onclick="getTunnelTry()">
    click here
