--- a/utils.html
+++ b/utils.html
@@ -34,7 +34,7 @@
  </head>
  <body>
   <p id="tunnel_url" style="display:none">
-   https://05a0f373.ngrok.io
+   hello
   </p>
   <button onclick="getTunnelTry()">
    click here
